# MovingCones

./: .gitmodules  CMakeLists.txt  ConeGenes.sln  ConeGenes.vcxproj  ConeGenes.vcxproj.filters  README.md
cmake/: CHOLMODConfig.cmake  FindOpenMesh.cmake
data/: kitten-cones.txt
include/: Cholmod_Solver.h  ConeOptimization.h  Eigen_Solver.h  MeshDefinition.h  MeshTopo.h
src/: Cholmod_Solver.cpp  ConeOptimization.cpp  Eigen_Solver.cpp  MeshDefinition.cpp  MeshLaplace.cpp  MeshLaplace.h  MeshTopo.cpp  main.cpp
